Fixed centering of dark mode toggle

--- a/webcenter-front/src/components/header/DarkModeToggle.css
+++ b/webcenter-front/src/components/header/DarkModeToggle.css
@@ -19,7 +19,7 @@
 {
     display: block;
     height: 20px;
-    margin: 0 28px 0 28px;
+    margin: 2px 28px 0 28px;
     position: relative;
     width: 40px;
 }
